--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -15,9 +15,9 @@
     "compiled"
   ],
   "scripts": {
-    "build": "pnpm tsc",
+    "build": "pnpm father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build --watch"
+    "dev": "pnpm father dev"
   },
   "dependencies": {
     "@umijs/utils": "4.0.0-canary.20220718.2",
