--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -28,9 +28,9 @@
     "stylelint.js"
   ],
   "scripts": {
-    "build": "pnpm tsc",
+    "build": "pnpm father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build --watch"
+    "dev": "pnpm father dev"
   },
   "dependencies": {
     "@umijs/lint": "4.0.0-canary.20220718.2",
