--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -19,9 +19,9 @@
     "devToolAppDist"
   ],
   "scripts": {
-    "build": "pnpm tsc",
+    "build": "pnpm father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build --watch",
+    "dev": "pnpm father dev",
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
