--- a/packages/preset-vue/package.json
+++ b/packages/preset-vue/package.json
@@ -17,9 +17,9 @@
     "compiled"
   ],
   "scripts": {
-    "build": "pnpm tsc",
+    "build": "pnpm father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build --watch"
+    "dev": "pnpm father dev"
   },
   "dependencies": {
     "@umijs/renderer-vue": "4.0.0-canary.20220718.2",
