--- a/packages/renderer-vue/package.json
+++ b/packages/renderer-vue/package.json
@@ -16,9 +16,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm tsc",
+    "build": "pnpm father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build --watch"
+    "dev": "pnpm father dev"
   },
   "peerDependencies": {
     "vue": ">=3.2.31",
