build: 👷 umi setup first

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -84,4 +84,6 @@ jobs:
 
       - name: Run test-test
         working-directory: ./examples/test-test
-        run: pnpm test
+        run: |
+          npx umi setup
+          pnpm test
