refactor: 🎨 format build command

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,4 +1,4 @@
-name: e2e-cypress
+name: e2e-test
 
 env:
   NODE_OPTIONS: --max-old-space-size=6144
@@ -51,10 +51,13 @@ jobs:
       - name: Install dependencies
         run: pnpm i
 
-      - name: Build example-max
-        run: pnpm umi-scripts turbo --cmd build --filter ./examples/max... --filter ./examples/test-test/...
+      - name: Build targets
+        run: pnpm umi-scripts turbo --cmd build  
+          --filter ./examples/max... 
+          --filter ./examples/test-test/...
 
-      - uses: cypress-io/github-action@v4
+      - name: example-max-e2e
+        uses: cypress-io/github-action@v4
         if: matrix.os == 'ubuntu-latest'
         with:
           start: pnpm run preview
@@ -67,8 +70,8 @@ jobs:
         env:
           cypress_key: ${{secrets.CYPRESS_KEY}}
           PORT: 9527
-
-      - uses: cypress-io/github-action@v4
+      - name: example-max-e2e-windows
+        uses: cypress-io/github-action@v4
         if: matrix.os == 'windows-latest'
         with:
           start: pnpm run preview
@@ -82,7 +85,7 @@ jobs:
           cypress_key: ${{secrets.CYPRESS_KEY}}
           PORT: 9527
 
-      - name: Run test-test
+      - name: Run example test-test
         working-directory: ./examples/test-test
         run: |
           npx umi setup
