--- a/examples/with-valtio/package.json
+++ b/examples/with-valtio/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@types/three": "^0.140.0",
-    "umi": "4.0.0-canary.20220628.2",
+    "umi": "4.0.3",
     "valtio": "^1.6.1"
   }
 }
