--- a/packages/mfsu/package.json
+++ b/packages/mfsu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/mfsu",
-  "version": "4.0.0-canary.20220628.2",
+  "version": "4.0.3",
   "description": "@umijs/mfsu",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/mfsu#readme",
   "bugs": "https://github.com/umijs/umi/issues",
@@ -23,9 +23,9 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
-    "@umijs/bundler-esbuild": "4.0.0-canary.20220628.2",
-    "@umijs/bundler-utils": "4.0.0-canary.20220628.2",
-    "@umijs/utils": "4.0.0-canary.20220628.2",
+    "@umijs/bundler-esbuild": "4.0.3",
+    "@umijs/bundler-utils": "4.0.3",
+    "@umijs/utils": "4.0.3",
     "enhanced-resolve": "5.9.3",
     "is-equal": "^1.6.4"
   },
