--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,5 +4,8 @@
   "private": true,
   "bin": {
     "umi-scripts": "bin/umi-scripts.js"
+  },
+  "devDependencies": {
+    "@umijs/utils": "workspace:*"
   }
 }
