wip: `plugin-doc` phantom deps

--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -26,6 +26,7 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
+    "@umijs/bundler-utils": "4.0.3",
     "keymaster": "1.6.2",
     "react-helmet": "^6.1.0",
     "rehype-pretty-code": "^0.3.1",
