--- a/packages/preset-vue/package.json
+++ b/packages/preset-vue/package.json
@@ -22,6 +22,7 @@
     "dev": "pnpm build --watch"
   },
   "dependencies": {
+    "@umijs/bundler-webpack": "4.0.3",
     "@umijs/renderer-vue": "4.0.3",
     "vue": "3.2.36",
     "vue-loader": "17.0.0",
