--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@umijs/bundler-utils": "4.0.3",
+    "@umijs/utils": "4.0.3",
     "keymaster": "1.6.2",
     "react-helmet": "^6.1.0",
     "rehype-pretty-code": "^0.3.1",
