--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
     "@umijs/error-code-map": "^1.0.1",
     "@umijs/utils": "3.3.14",
     "dotenv": "8.2.0",
+    "dotenv-expand": "8.0.3",
     "ejs": "3.1.5",
     "marked": "1.2.7",
     "marked-terminal": "4.1.0",
