fix(preset-built-in): declare @umijs/core in dependencies

--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -28,6 +28,7 @@
     "@types/react-router-config": "5.0.2",
     "@umijs/babel-preset-umi": "3.5.27",
     "@umijs/bundler-webpack": "3.5.27",
+    "@umijs/core": "3.5.27",
     "@umijs/deps": "3.5.27",
     "@umijs/renderer-mpa": "3.5.27",
     "@umijs/renderer-react": "3.5.27",
