fix(server): declare @umijs/core in dependencies

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@umijs/core": "3.5.27",
     "@umijs/deps": "3.5.27",
     "@umijs/utils": "3.5.27"
   }
