--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -102,6 +102,7 @@
     "@types/sockjs": "0.3.32",
     "@types/spdy": "3.4.4",
     "@types/tapable": "1.0.6",
+    "@types/update-notifier": "5.1.0",
     "@types/webpack": "4.41.26",
     "@types/webpack-dev-middleware": "3.7.2",
     "@types/webpack-sources": "1.4.2",
@@ -186,6 +187,7 @@
     "tapable": "1.1.3",
     "taskr": "1.1.0",
     "umi-webpack-bundle-analyzer": "3.6.2",
+    "update-notifier": "5.1.0",
     "url-loader": "4.1.1",
     "webpack": "4.46.0",
     "webpack-chain": "6.5.1",
