fix(preset-umi): add transformIndexHtml for ViteHtmlPlugin

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@umijs/bundler-utils": "4.0.5",
+    "@umijs/utils": "4.0.5",
     "history": "5.3.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
