--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,10 +38,12 @@
   "compiledConfig": {
     "deps": [
       "dotenv",
+      "dotenv-expand",
       "just-diff"
     ],
     "externals": {
       "dotenv": "$$LOCAL",
+      "dotenv-expand": "$$LOCAL",
       "just-diff": "$$LOCAL",
       "tapable": "@umijs/bundler-utils/compiled/tapable"
     }
