--- a/examples/qiankun-slave/package.json
+++ b/examples/qiankun-slave/package.json
@@ -7,7 +7,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/max": "4.0.5",
+    "@umijs/max": "4.0.0-canary.20220707.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   }
