--- a/examples/with-sass/package.json
+++ b/examples/with-sass/package.json
@@ -7,7 +7,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "4.0.5"
+    "umi": "4.0.0-canary.20220707.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
