chore: ✏️ examples link update

--- a/examples/config-base/package.json
+++ b/examples/config-base/package.json
@@ -22,5 +22,5 @@
     "umi": "latest"
   },
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/config-base#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/config-base#readme"
 }
