--- a/examples/config-404/package.json
+++ b/examples/config-404/package.json
@@ -20,5 +20,5 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/config-404#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/config-404#readme"
 }
