--- a/examples/config-proxy/package.json
+++ b/examples/config-proxy/package.json
@@ -23,7 +23,7 @@
     "umi": "latest"
   },
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/config-proxy#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/config-proxy#readme",
   "devDependencies": {
     "cross-env": "^7.0.3"
   }
