--- a/examples/convention-mock/package.json
+++ b/examples/convention-mock/package.json
@@ -23,5 +23,5 @@
     "umi": "latest"
   },
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/convention-mock#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/convention-mock#readme"
 }
