--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -22,5 +22,5 @@
   },
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/hello-world#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/hello-world#readme"
 }
