--- a/examples/plugin-initial-state/package.json
+++ b/examples/plugin-initial-state/package.json
@@ -24,5 +24,5 @@
   },
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/plugin-initial-state#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/plugin-initial-state#readme"
 }
