--- a/examples/with-dva/package.json
+++ b/examples/with-dva/package.json
@@ -25,5 +25,5 @@
     "umi": "latest"
   },
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/with-dva#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/with-dva#readme"
 }
