--- a/examples/with-kea/package.json
+++ b/examples/with-kea/package.json
@@ -29,5 +29,5 @@
     "umi": "latest"
   },
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/with-kea#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/with-kea#readme"
 }
