--- a/examples/with-sentry/package.json
+++ b/examples/with-sentry/package.json
@@ -27,5 +27,5 @@
     "@alitajs/sentry": "1.0.3"
   },
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/with-sentry#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/with-sentry#readme"
 }
