--- a/examples/with-yarn-workspaces/package.json
+++ b/examples/with-yarn-workspaces/package.json
@@ -23,5 +23,5 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/examples/with-yarn-workspaces#readme"
+  "homepage": "https://github.com/umijs/umi/tree/3.x/examples/with-yarn-workspaces#readme"
 }
