--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -21,7 +21,7 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/packages/bundler-webpack#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/packages/bundler-webpack#readme",
   "publishConfig": {
     "access": "public"
   },
