--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -23,7 +23,7 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/packages/umi#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/packages/umi#readme",
   "publishConfig": {
     "access": "public"
   },
