--- a/packages/babel-preset-umi/package.json
+++ b/packages/babel-preset-umi/package.json
@@ -22,7 +22,7 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/packages/babel-preset-umi#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/packages/babel-preset-umi#readme",
   "publishConfig": {
     "access": "public"
   },
