--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,7 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/packages/core#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/packages/core#readme",
   "publishConfig": {
     "access": "public"
   },
