--- a/packages/deps/package.json
+++ b/packages/deps/package.json
@@ -31,7 +31,7 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/packages/deps#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/packages/deps#readme",
   "publishConfig": {
     "access": "public"
   },
