--- a/packages/renderer-mpa/package.json
+++ b/packages/renderer-mpa/package.json
@@ -21,7 +21,7 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/packages/renderer-mpa#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/packages/renderer-mpa#readme",
   "publishConfig": {
     "access": "public"
   },
