--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -20,7 +20,7 @@
   ],
   "license": "MIT",
   "bugs": "http://github.com/umijs/umi/issues",
-  "homepage": "https://github.com/umijs/umi/tree/master/packages/runtime#readme",
+  "homepage": "https://github.com/umijs/umi/tree/3.x/packages/runtime#readme",
   "publishConfig": {
     "access": "public"
   },
