--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ env:
 on:
   push:
     branches:
-      - master
+      - ci/compress-size
     paths-ignore:
       - 'examples/**'
       - 'docs/**'
