--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ env:
 on:
   push:
     branches:
-      - ci/compress-size
+      - master
     paths-ignore:
       - 'examples/**'
       - 'docs/**'
@@ -15,6 +15,7 @@ on:
     types:
       - 'opened'
       - 'synchronize'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
