--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -30,9 +30,21 @@ jobs:
         with:
           run_install: false
 
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-compressed-size-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-compressed-size-
+
       - uses: preactjs/compressed-size-action@v2
         with:
           build-script: "build"
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
           pattern: "./packages/*/{dist,compiled}/**/*.js"
-          compression: "none"
