--- a/.github/workflows/compressed-size.yml
+++ b/.github/workflows/compressed-size.yml
@@ -47,4 +47,4 @@ jobs:
         with:
           build-script: "build"
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          pattern: "./packages/*/{dist,compiled}/**/*.js"
+          pattern: "./packages/*/{dist,compiled}/**/*.{js,d.ts}"
