chore: 🔧 scripts update for pnpm 7

--- a/packages/plugin-docs/package.json
+++ b/packages/plugin-docs/package.json
@@ -22,7 +22,7 @@
     "build:deps": "umi-scripts bundleDeps",
     "build:extra": "pnpm build:css",
     "dev": "pnpm build --watch",
-    "dev:css": "pnpm build:css -- --watch",
+    "dev:css": "pnpm build:css --watch",
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
