--- a/packages/plugins/package.json
+++ b/packages/plugins/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/plugins",
-  "version": "4.0.6",
+  "version": "4.0.0-canary.20220713.1",
   "description": "@umijs/plugins",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/plugins#readme",
   "bugs": "https://github.com/umijs/umi/issues",
@@ -25,7 +25,7 @@
     "@ahooksjs/use-request": "^2.0.0",
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^7.0.1-beta.20",
-    "@umijs/bundler-utils": "4.0.6",
+    "@umijs/bundler-utils": "4.0.0-canary.20220713.1",
     "antd-dayjs-webpack-plugin": "^1.0.6",
     "axios": "^0.27.2",
     "babel-plugin-import": "^1.13.5",
@@ -44,7 +44,7 @@
     "warning": "^4.0.3"
   },
   "devDependencies": {
-    "umi": "4.0.6"
+    "umi": "4.0.0-canary.20220713.1"
   },
   "publishConfig": {
     "access": "public"
