--- a/packages/preset-built-in/package.json
+++ b/packages/preset-built-in/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/preset-built-in",
-  "version": "3.5.28",
+  "version": "3.5.29-alpha.0",
   "description": "@umijs/preset-built-in",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,16 +26,16 @@
   },
   "dependencies": {
     "@types/react-router-config": "5.0.2",
-    "@umijs/babel-preset-umi": "3.5.28",
-    "@umijs/bundler-webpack": "3.5.28",
-    "@umijs/core": "3.5.28",
-    "@umijs/deps": "3.5.28",
-    "@umijs/renderer-mpa": "3.5.28",
-    "@umijs/renderer-react": "3.5.28",
-    "@umijs/runtime": "3.5.28",
-    "@umijs/server": "3.5.28",
-    "@umijs/types": "3.5.28",
-    "@umijs/utils": "3.5.28",
+    "@umijs/babel-preset-umi": "3.5.29-alpha.0",
+    "@umijs/bundler-webpack": "3.5.29-alpha.0",
+    "@umijs/core": "3.5.29-alpha.0",
+    "@umijs/deps": "3.5.29-alpha.0",
+    "@umijs/renderer-mpa": "3.5.29-alpha.0",
+    "@umijs/renderer-react": "3.5.29-alpha.0",
+    "@umijs/runtime": "3.5.29-alpha.0",
+    "@umijs/server": "3.5.29-alpha.0",
+    "@umijs/types": "3.5.29-alpha.0",
+    "@umijs/utils": "3.5.29-alpha.0",
     "ansi-html": "^0.0.7",
     "core-js": "3.6.5",
     "core-js-pure": "^3.8.1",
