--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/types",
-  "version": "3.5.28",
+  "version": "3.5.29-alpha.0",
   "description": "@umijs/types",
   "main": "lib/index.js",
   "types": "index",
@@ -25,12 +25,12 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/babel-preset-umi": "3.5.28",
-    "@umijs/core": "3.5.28",
-    "@umijs/deps": "3.5.28",
-    "@umijs/renderer-react": "3.5.28",
-    "@umijs/server": "3.5.28",
-    "@umijs/utils": "3.5.28",
+    "@umijs/babel-preset-umi": "3.5.29-alpha.0",
+    "@umijs/core": "3.5.29-alpha.0",
+    "@umijs/deps": "3.5.29-alpha.0",
+    "@umijs/renderer-react": "3.5.29-alpha.0",
+    "@umijs/server": "3.5.29-alpha.0",
+    "@umijs/utils": "3.5.29-alpha.0",
     "webpack-chain": "6.5.1"
   }
 }
