--- a/examples/with-monaco-editor-react/package.json
+++ b/examples/with-monaco-editor-react/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.5",
-    "umi": "4.0.0-canary.20220713.1"
+    "umi": "4.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
