--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/server",
-  "version": "4.0.0-canary.20220713.1",
+  "version": "4.0.7",
   "description": "@umijs/server",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/server#readme",
   "bugs": "https://github.com/umijs/umi/issues",
@@ -20,7 +20,7 @@
     "dev": "pnpm build --watch"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.0-canary.20220713.1",
+    "@umijs/bundler-utils": "4.0.7",
     "history": "5.3.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
