--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-utils",
-  "version": "3.5.29-alpha.0",
+  "version": "3.5.29",
   "description": "@umijs/bundler-utils",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,8 +24,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/babel-preset-umi": "3.5.29-alpha.0",
-    "@umijs/types": "3.5.29-alpha.0",
-    "@umijs/utils": "3.5.29-alpha.0"
+    "@umijs/babel-preset-umi": "3.5.29",
+    "@umijs/types": "3.5.29",
+    "@umijs/utils": "3.5.29"
   }
 }
