--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/utils",
-  "version": "3.5.29-alpha.0",
+  "version": "3.5.29",
   "description": "@umijs/utils",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,6 +24,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@umijs/deps": "3.5.29-alpha.0"
+    "@umijs/deps": "3.5.29"
   }
 }
