feat: add @umijs/codemod

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build:force": "umi-scripts turbo --cmd build --no-cache",
     "build:release": "umi-scripts turbo --cmd build --no-cache -- --declarationMap false",
     "check:packageFiles": "umi-scripts checkPackageFiles",
+    "codemod:build": "pnpm --filter @umijs/codemod build",
+    "codemod:dev": "pnpm --filter @umijs/codemod build --watch",
+    "codemod:release": "umi-scripts releaseCodemod",
+    "codemod:run": "BACON=none GIT_CHECK=none ./codemod/bin/umi-codemod.js --cwd codemod/fixtures/tmp",
+    "codemod:test": "BACON=none GIT_CHECK=none umi-scripts testCodemod",
     "cov": "jest --coverage",
     "dep:update": "pnpm up --interactive --latest --recursive",
     "dev": "umi-scripts turbo --cmd dev --parallel",
