--- a/examples/mfsu-un-match-libs/package.json
+++ b/examples/mfsu-un-match-libs/package.json
@@ -9,13 +9,13 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.7",
-    "@umijs/preset-vue": "4.0.7",
+    "@umijs/plugins": "4.0.0-canary.20220718.1",
+    "@umijs/preset-vue": "4.0.0-canary.20220718.1",
     "@vant/icons": "^1.8.0",
     "@vant/popperjs": "^1.1.0",
     "@vant/use": "^1.3.6",
     "tailwindcss": "^3.0.24",
-    "umi": "4.0.7",
+    "umi": "4.0.0-canary.20220718.1",
     "vant": "3.4.9",
     "vue": "3.2.36"
   }
