--- a/examples/with-request/package.json
+++ b/examples/with-request/package.json
@@ -7,8 +7,8 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@umijs/plugins": "4.0.7",
-    "umi": "4.0.7"
+    "@umijs/plugins": "4.0.0-canary.20220718.1",
+    "umi": "4.0.0-canary.20220718.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
