--- a/packages/ast/package.json
+++ b/packages/ast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/ast",
-  "version": "4.0.7",
+  "version": "4.0.0-canary.20220718.1",
   "description": "@umijs/ast",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/ast#readme",
   "bugs": "https://github.com/umijs/umi/issues",
@@ -21,7 +21,7 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
-    "@umijs/bundler-utils": "4.0.7"
+    "@umijs/bundler-utils": "4.0.0-canary.20220718.1"
   },
   "publishConfig": {
     "access": "public"
