--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/renderer-react",
-  "version": "4.0.7",
+  "version": "4.0.0-canary.20220718.1",
   "description": "@umijs/renderer-react",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/renderer-react#readme",
   "bugs": "https://github.com/umijs/umi/issues",
