feat: codemod test

--- a/codemod/package.json
+++ b/codemod/package.json
@@ -15,7 +15,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm tsc"
+    "build": "pnpm tsc",
+    "test": "jest"
   },
   "dependencies": {
     "@umijs/ast": "4.0.7",
