--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -22,6 +22,7 @@
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
+    "@babel/runtime": "7.17.9",
     "@loadable/component": "5.15.2",
     "history": "5.3.0",
     "react-router-dom": "6.3.0"
