--- a/packages/bundler-webpack/package.json
+++ b/packages/bundler-webpack/package.json
@@ -21,14 +21,14 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm tsc",
-    "build:client": "pnpm tsc --project ./tsconfig.client.json",
+    "build": "pnpm father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build --watch",
+    "dev": "pnpm father dev",
     "generate:webpackPackages": "zx ./scripts/generateWebpackPackages.mjs",
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
+    "@babel/runtime": "7.17.9",
     "@parcel/css": "1.9.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.7",
     "@svgr/core": "6.2.1",
