--- a/packages/renderer-react/package.json
+++ b/packages/renderer-react/package.json
@@ -16,12 +16,13 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm tsc",
+    "build": "pnpm father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm build --watch",
+    "dev": "pnpm father dev",
     "test": "umi-scripts jest-turbo"
   },
   "dependencies": {
+    "@babel/runtime": "7.17.9",
     "@loadable/component": "5.15.2",
     "history": "5.3.0",
     "react-router-dom": "6.3.0"
