--- a/packages/bundler-utils/package.json
+++ b/packages/bundler-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/bundler-utils",
-  "version": "4.0.0-canary.20220720.1",
+  "version": "4.0.8",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/bundler-utils#readme",
   "bugs": "https://github.com/umijs/umi/issues",
   "repository": {
@@ -20,7 +20,7 @@
     "dev": "pnpm father dev"
   },
   "dependencies": {
-    "@umijs/utils": "4.0.0-canary.20220720.1",
+    "@umijs/utils": "4.0.8",
     "esbuild": "0.14.36",
     "regenerate-unicode-properties": "10.0.1",
     "spdy": "^4.0.2"
