--- a/packages/max/package.json
+++ b/packages/max/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/max",
-  "version": "4.0.0-canary.20220720.1",
+  "version": "4.0.8",
   "description": "@umijs/max",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/pro#readme",
   "bugs": "https://github.com/umijs/umi/issues",
@@ -33,12 +33,12 @@
     "dev": "pnpm father dev"
   },
   "dependencies": {
-    "@umijs/lint": "4.0.0-canary.20220720.1",
-    "@umijs/plugins": "4.0.0-canary.20220720.1",
+    "@umijs/lint": "4.0.8",
+    "@umijs/plugins": "4.0.8",
     "antd": "^4.20.6",
     "eslint": "8.15.0",
     "stylelint": "14.8.2",
-    "umi": "4.0.0-canary.20220720.1"
+    "umi": "4.0.8"
   },
   "publishConfig": {
     "access": "public"
