--- a/packages/preset-umi/package.json
+++ b/packages/preset-umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umijs/preset-umi",
-  "version": "4.0.0-canary.20220720.1",
+  "version": "4.0.8",
   "description": "@umijs/preset-umi",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/preset-umi#readme",
   "bugs": "https://github.com/umijs/umi/issues",
@@ -26,15 +26,15 @@
   },
   "dependencies": {
     "@types/multer": "1.4.7",
-    "@umijs/ast": "4.0.0-canary.20220720.1",
-    "@umijs/babel-preset-umi": "4.0.0-canary.20220720.1",
-    "@umijs/bundler-utils": "4.0.0-canary.20220720.1",
-    "@umijs/bundler-vite": "4.0.0-canary.20220720.1",
-    "@umijs/bundler-webpack": "4.0.0-canary.20220720.1",
-    "@umijs/core": "4.0.0-canary.20220720.1",
-    "@umijs/renderer-react": "4.0.0-canary.20220720.1",
-    "@umijs/server": "4.0.0-canary.20220720.1",
-    "@umijs/utils": "4.0.0-canary.20220720.1",
+    "@umijs/ast": "4.0.8",
+    "@umijs/babel-preset-umi": "4.0.8",
+    "@umijs/bundler-utils": "4.0.8",
+    "@umijs/bundler-vite": "4.0.8",
+    "@umijs/bundler-webpack": "4.0.8",
+    "@umijs/core": "4.0.8",
+    "@umijs/renderer-react": "4.0.8",
+    "@umijs/server": "4.0.8",
+    "@umijs/utils": "4.0.8",
     "click-to-react-component": "^1.0.8",
     "core-js": "3.22.4",
     "current-script-polyfill": "1.0.0",
