--- a/packages/umi/package.json
+++ b/packages/umi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi",
-  "version": "4.0.0-canary.20220720.1",
+  "version": "4.0.8",
   "description": "umi",
   "homepage": "https://github.com/umijs/umi/tree/master/packages/umi#readme",
   "bugs": "https://github.com/umijs/umi/issues",
@@ -37,15 +37,15 @@
   },
   "dependencies": {
     "@babel/runtime": "7.17.9",
-    "@umijs/bundler-utils": "4.0.0-canary.20220720.1",
-    "@umijs/bundler-webpack": "4.0.0-canary.20220720.1",
-    "@umijs/core": "4.0.0-canary.20220720.1",
-    "@umijs/lint": "4.0.0-canary.20220720.1",
-    "@umijs/preset-umi": "4.0.0-canary.20220720.1",
-    "@umijs/renderer-react": "4.0.0-canary.20220720.1",
-    "@umijs/server": "4.0.0-canary.20220720.1",
-    "@umijs/test": "4.0.0-canary.20220720.1",
-    "@umijs/utils": "4.0.0-canary.20220720.1",
+    "@umijs/bundler-utils": "4.0.8",
+    "@umijs/bundler-webpack": "4.0.8",
+    "@umijs/core": "4.0.8",
+    "@umijs/lint": "4.0.8",
+    "@umijs/preset-umi": "4.0.8",
+    "@umijs/renderer-react": "4.0.8",
+    "@umijs/server": "4.0.8",
+    "@umijs/test": "4.0.8",
+    "@umijs/utils": "4.0.8",
     "prettier-plugin-organize-imports": "^2.3.4",
     "prettier-plugin-packagejson": "^2.2.17"
   },
