build: unified father build command

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "private": true,
   "scripts": {
     "bootstrap": "umi-scripts bootstrap",
-    "build": "umi-scripts turbo --cmd build",
-    "build:extra": "umi-scripts turbo --cmd build:extra",
-    "build:force": "umi-scripts turbo --cmd build --no-cache",
-    "build:release": "umi-scripts turbo --cmd build --no-cache -- --declarationMap false",
+    "build": "umi-scripts turbo build",
+    "build:extra": "umi-scripts turbo build:extra",
+    "build:force": "umi-scripts turbo build --no-cache",
+    "build:release": "umi-scripts turbo build --no-cache",
     "check:packageFiles": "umi-scripts checkPackageFiles",
     "codemod:build": "pnpm --filter @umijs/codemod build",
     "codemod:dev": "pnpm --filter @umijs/codemod build --watch",
@@ -15,11 +15,11 @@
     "codemod:test": "BACON=none GIT_CHECK=none umi-scripts testCodemod",
     "cov": "jest --coverage",
     "dep:update": "pnpm up --interactive --latest --recursive",
-    "dev": "umi-scripts turbo --cmd dev --parallel",
+    "dev": "umi-scripts turbo dev --parallel",
     "doc:build": "pnpm doc:deps && umi build",
     "doc:deps": "pnpm doc:deps-ts && pnpm doc:deps-extra",
-    "doc:deps-extra": "umi-scripts turbo --cmd build:extra --filter @umijs/plugin-docs...",
-    "doc:deps-ts": "umi-scripts turbo --cmd build --filter @umijs/plugin-docs...",
+    "doc:deps-extra": "umi-scripts turbo build:extra --filter @umijs/plugin-docs...",
+    "doc:deps-ts": "umi-scripts turbo build --filter @umijs/plugin-docs...",
     "doc:dev": "umi dev",
     "format": "prettier --cache --write .",
     "format:docs": "prettier --cache 'docs/**/*.{md,mdx}' --write --ignore-path .gitignore --ignore-unknown",
@@ -32,7 +32,7 @@
     "setup:webstorm": "umi-scripts setupWebStorm",
     "sync:tnpm": "umi-scripts syncTnpm",
     "test": "jest",
-    "test:clean": "umi-scripts turbo --cmd test --no-cache --parallel -- --clearCache",
+    "test:clean": "umi-scripts turbo test --no-cache --parallel -- --clearCache",
     "test:e2e": "jest --config jest.e2e.config.ts",
     "tsc:check": "tsc --noEmit",
     "turbo:clean": "rimraf .turbo"
