--- a/packages/bundler-vite/package.json
+++ b/packages/bundler-vite/package.json
@@ -20,9 +20,9 @@
     "scripts"
   ],
   "scripts": {
-    "build": "pnpm father build",
+    "build": "umi-scripts father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm father dev",
+    "dev": "umi-scripts father dev",
     "postinstall": "node scripts/linkDeps.js",
     "test": "umi-scripts jest-turbo"
   },
