--- a/packages/preset-vue/package.json
+++ b/packages/preset-vue/package.json
@@ -17,9 +17,9 @@
     "compiled"
   ],
   "scripts": {
-    "build": "pnpm father build",
+    "build": "umi-scripts father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm father dev"
+    "dev": "umi-scripts father dev"
   },
   "dependencies": {
     "@umijs/renderer-vue": "4.0.8",
