--- a/packages/renderer-vue/package.json
+++ b/packages/renderer-vue/package.json
@@ -16,9 +16,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm father build",
+    "build": "umi-scripts father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm father dev"
+    "dev": "umi-scripts father dev"
   },
   "dependencies": {
     "@babel/runtime": "7.17.9"
