--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,9 +15,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm father build",
+    "build": "umi-scripts father build",
     "build:deps": "umi-scripts bundleDeps",
-    "dev": "pnpm father dev"
+    "dev": "umi-scripts father dev"
   },
   "dependencies": {
     "@umijs/bundler-utils": "4.0.8",
